--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16",
+    "nodemailer": "^6.4.8",
     "path": "^0.12.7"
   }
 }
